fix layout issues

--- a/src/styles/Education.css
+++ b/src/styles/Education.css
@@ -3,6 +3,7 @@
   flex-direction: column;
   align-items: space-between;
   padding: 1rem 5vw;
+  gap: 1rem;
 }
 
 .education-wrapper .details {
