--- a/src/styles/Experience.css
+++ b/src/styles/Experience.css
@@ -3,6 +3,7 @@
   flex-direction: column;
   align-items: space-between;
   padding: 1rem 5vw;
+  gap: 1rem;
 }
 
 .experience-wrapper .details {
@@ -14,4 +15,11 @@ ul {
   margin: 0;
   padding: 0;
   list-style-position: inside;
+}
+
+@media only screen and (min-width: 1000px) {
+  .experience-wrapper {
+    grid-row: 2 / 4;
+    grid-column: 2/ 3; 
+  }
 }
